--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
  "httpx>=0.28.0",
  "jsonschema>=4.23.0",
+ "fastmcp>=0.1.0",
  "mcp>=1.0.0",
  "pinecone>=5.4.1",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.8.0",
+ "starlette>=0.46.1",
+ "uvicorn>=0.23.1",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
